<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_keyword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hini_keyword" />
    <EditText
        android:id="@+id/et_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hini_city_name" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/x_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/y_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_pois"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000" >
    </ListView>

</LinearLayout>